[gd_scene load_steps=8 format=3 uid="uid://dqu1dnmrn7ay2"]

[ext_resource type="Script" path="res://main/sub_main_scene/gameplay/gameplay.gd" id="1_kxjxo"]
[ext_resource type="Texture2D" uid="uid://gmpkklh2jf5y" path="res://assets/ui/icons/back.png" id="1_t2od6"]
[ext_resource type="FontFile" path="res://assets/ui/fonts/montserrat_eb_48.tres" id="2_icitr"]
[ext_resource type="Texture2D" uid="uid://cye5qtksbpuoa" path="res://assets/ui/icons/clear.png" id="4_jyn5d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wq1f"]
bg_color = Color(0.415686, 0.415686, 0.415686, 0.631373)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ul3h"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 16
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tw2nr"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 4
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 4

[node name="gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kxjxo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="back_button" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
flat = true

[node name="Panel2" type="Panel" parent="VBoxContainer/HBoxContainer2/back_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7wq1f")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2/back_button"]
modulate = Color(1, 0.894118, 0.635294, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -13.5
offset_right = 12.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_t2od6")
expand_mode = 1
stretch_mode = 5

[node name="level" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_icitr")
theme_override_font_sizes/font_size = 24
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
mouse_filter = 2

[node name="GridContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="grid" type="GridContainer" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
columns = 9

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
color = Color(0.141176, 0.141176, 0.141176, 0.654902)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5ul3h")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 34)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="clear_word" type="Button" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/clear_word"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_jyn5d")
expand_mode = 1

[node name="check_word" type="Button" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
flat = true

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/check_word"]
custom_minimum_size = Vector2(72, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/check_word/MarginContainer4"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tw2nr")

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/check_word/MarginContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.827451, 0.368627, 1)
theme_override_fonts/font = ExtResource("2_icitr")
theme_override_font_sizes/font_size = 16
text = "cek"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="grid_input_container" type="VBoxContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="TimerDelay" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/clear_word" to="." method="_on_clear_word_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/check_word" to="." method="_on_check_word_pressed"]
